# skillmcp

./: .gitignore  LICENSE  README.md  pyproject.toml  skillmcp.json.example  test_self.py
docs/: DESIGN.md  DEVELOPMENT_GUIDE.md  NOTES.md  QUICKSTART.md  TEST_REPORT.md  TEST_REPORT_PROVIDER.md  TOOL_CHANGE_NOTIFICATION.md  USAGE_FLOW.md
skillmcp/: __init__.py  cli.py  server.py  server_dynamic.py  server_provider.py  server_provider_v3.py  server_v2.py  server_v3.py
skillmcp/core/: __init__.py  gateway.py  interfaces.py  package_manager.py  registry.py
